--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             position: absolute;
             opacity: 0;
             cursor: pointer;
+            height: 0;
+            width: 0;
         }
 
         .checkmark {
@@ -50,7 +52,20 @@
             height: 25px;
             width: 25px;
             background-color: #eee;
+            border-radius: 50%;
+            border: 1px solid #000;
+        }
+
+        .checkmark:after {
+            content: "";
+            position: absolute;
             display: none;
+            top: 7px;
+            left: 7px;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background: #000;
         }
 
         label:hover input ~ .checkmark {
@@ -58,8 +73,11 @@
         }
 
         label input:checked ~ .checkmark {
-            background-color: #2196F3;
-            display: inline;
+            background-color: #eee;
+        }
+
+        label input:checked ~ .checkmark:after {
+            display: block;
         }
 
         #result {
@@ -248,6 +266,7 @@
             },
                     // 更多问题...
             ];
+
     const msqForm = document.getElementById("msq-form");
 
     function createQuestionDiv(question) {
@@ -270,7 +289,6 @@
             input.onclick = () => {
                 const nextQuestion = document.getElementById(`question-${question.id + 1}`);
                 if (nextQuestion) {
-                    questionDiv.classList.remove("active");
                     nextQuestion.classList.add("active");
                 } else {
                     document.getElementById("submit-button").style.display = "block";
